--- a/src/pages/pubs.astro
+++ b/src/pages/pubs.astro
@@ -15,20 +15,47 @@ import Background from "../components/Background.astro";
       <PageTitle title="Publications" />
       <Publication year="Forthcoming" />
       <Forthcoming
-        author="Giarla, T. C., Achmadi, A.S., Fabre, P. H., Handika, H., Chipps, A. S., Swanson, M.T., Nations, J. A., Morni, M. A., William-Dee, J., Inayah, N., Jayanti, E. D., Nurdin, M.R.T.J., Griffin, K. E., Khan, F. A. A., Heaney, L. R., Rowe, K. C., Esselstyn, J. A"
+        authors={[
+          "Giarla, T. C.",
+          "Achmadi, A.S.",
+          "Fabre, P. H.",
+          "Handika, H.",
+          "Chipps, A. S.",
+          "Swanson, M.T.",
+          "Nations, J. A.",
+          "Morni, M. A.",
+          "William-Dee, J.",
+          "Inayah, N.",
+          "Jayanti, E. D.",
+          "Nurdin, M.R.T.J.",
+          "Griffin, K. E.",
+          "Khan, F. A. A.",
+          "Heaney, L. R.",
+          "Rowe, K. C.",
+          "Esselstyn, J. A",
+        ]}
         year="In press"
         title="Systematics and historical biogeography of Crunomys and Maxomys (Muridae: Murinae), with the description of a new species from Sulawesi and new genus-level classification"
         journal="Journal of Mammalogy"
       />
       <Forthcoming
-        author="Burgin, C. J., Zijlstra, J. S., Becker, M. A., Handika, H., Widness, J., Liphardt, S., Huckaby, D. G., Upham, N. S"
+        authors={[
+          "Burgin, C. J.",
+          "Zijlstra, J. S.",
+          "Becker, M. A.",
+          "Handika, H.",
+          "Widness, J.",
+          "Liphardt, S.",
+          "Huckaby, D. G.",
+          "Upham, N. S",
+        ]}
         year="Submitted"
         title="How many mammal species are there now? Updates and trends in taxonomic, nomenclatural, and geographic knowledge"
         journal="Journal of Mammalogy"
       />
       <Publication year="2024">
         <Published
-          author="Handika, H. and Esselstyn, J. A"
+          authors={["Handika, H.", "Esselstyn, J. A"]}
           year={2024}
           title="SEGUL: Ultrafast, memory-efficient and mobile-friendly software for manipulating and summarizing phylogenomic datasets"
           journal="Molecular Ecology Resources"
@@ -38,7 +65,15 @@ import Background from "../components/Background.astro";
           isRequest={true}
         />
         <Published
-          author="Nations, J.A., Kohli, B.A., Handika, H. , Achmadi, A.S., Polito, M.J., Rowe, K.C. and Esselstyn, J. A"
+          authors={[
+            "Nations, J.A.",
+            "Kohli, B.A.",
+            "Handika, H.",
+            "Achmadi, A.S.",
+            "Polito, M.J.",
+            "Rowe, K.C.",
+            "Esselstyn, J. A",
+          ]}
           year={2024}
           title="The roles of isolation and interspecific interaction in generating the functional diversity of an insular mammal radiation"
           journal="Oikos"
@@ -48,7 +83,15 @@ import Background from "../components/Background.astro";
           isRequest={true}
         />
         <Published
-          author="Nations, J. A., Handika, H., Mursyid, A., Butsa, R. D., Apandi, Achmadi, A. S. Esselstyn, J. A"
+          authors={[
+            "Nations, J. A.",
+            "Handika, H.",
+            "Mursyid, A.",
+            "Butsa, R. D.",
+            "Apandi",
+            "Achmadi, A. S.",
+            "Esselstyn, J. A",
+          ]}
           year={2024}
           title="Three new species of shrew (Soricidae: Crocidura) from West Sumatra, Indonesia: elevational and morphological divergence in syntopic sister taxa"
           journal="Journal of Mammalogy"
@@ -59,7 +102,17 @@ import Background from "../components/Background.astro";
       </Publication>
       <Publication year="2023">
         <Published
-          author="Mursyid, A., Achmadi, A.S., Novarino, W., Handika, H., Nugroho, H.A., Anita, S., Adams, A.L., Rowe, K.M.C. and Rowe, K.C"
+          authors={[
+            "Mursyid, A.",
+            "Achmadi, A.S.",
+            "Novarino, W.",
+            "Handika, H.",
+            "Nugroho, H.A.",
+            "Anita, S.",
+            "Adams, A.L.",
+            "Rowe, K.M.C.",
+            "Rowe, K.C",
+          ]}
           year={2023}
           title="Trypanosoma (Euglenozoa: Kinetoplastea) infections in rodents, bats, and shrews along an elevation and disturbance gradient in Central Sulawesi, Indonesia"
           journal="Contributions to Mammalogy and Zooarchaeology of Wallacea"
@@ -68,7 +121,19 @@ import Background from "../components/Background.astro";
           pdfUrl="https://journals.australian.museum/media/dd/documents/1786_complete.62f64af.pdf"
         />
         <Published
-          author="Achmadi, A. S., Fahri, F., Gazzard, A., Handika, H., Inayah, N., Kennerley, R. J., Lanusi, A. A., Nangoy, M., Nurdin, M. R., Rowe, K. C., Sheherazade"
+          authors={[
+            "Achmadi, A. S.",
+            "Fahri, F.",
+            "Gazzard, A.",
+            "Handika, H.",
+            "Inayah, N.",
+            "Kennerley, R. J.",
+            "Lanusi, A. A.",
+            "Nangoy, M.",
+            "Nurdin, M. R.",
+            "Rowe, K. C.",
+            "Sheherazade",
+          ]}
           year={2023}
           title="Conservation status and priorities for Sulawesi's unique small mammal fauna"
           journal="Journal of Mammalogy"
@@ -77,7 +142,15 @@ import Background from "../components/Background.astro";
           pdfUrl="https://www.researchgate.net/publication/376432985_Conservation_status_and_priorities_for_Sulawesi's_unique_small_mammal_fauna"
         />
         <Published
-          author="Swanson, M.T., Henson, M.W., Handika, H., Achmadi, A.S., Anita, S., Rowe, K.C. and Esselstyn, J.A"
+          authors={[
+            "Swanson, M.T.",
+            "Henson, M.W.",
+            "Handika, H.",
+            "Achmadi, A.S.",
+            "Anita, S.",
+            "Rowe, K.C.",
+            "Esselstyn, J.A",
+          ]}
           year={2023}
           title="Mycoplasmataceae dominate microbial community differences between gut regions in mammals with a simple gut architecture"
           journal="Journal of Mammalogy"
@@ -88,7 +161,14 @@ import Background from "../components/Background.astro";
       </Publication>
       <Publication year="2021">
         <Published
-          author="Esselstyn, J.A., Achmadi, A.S., Handika, H., Swanson, M. T., Giarla, T.C. and Rowe, K.C"
+          authors={[
+            "Esselstyn, J.A.",
+            "Achmadi, A.S.",
+            "Handika, H.",
+            "Swanson, M. T.",
+            "Giarla, T.C.",
+            "Rowe, K.C",
+          ]}
           year={2021}
           title="Fourteen new, endemic species of shrew (genus Crocidura) from Sulawesi reveal a spectacular island radiation"
           journal="Bulletin of the American Museum of Natural History"
@@ -98,7 +178,12 @@ import Background from "../components/Background.astro";
         />
         <Published
           id="handika2021"
-          author="Handika, H., Achmadi, A.S., Esselstyn, J.A., and Rowe, K.C"
+          authors={[
+            "Handika, H.",
+            "Achmadi, A.S.",
+            "Esselstyn, J.A.",
+            "Rowe, K.C",
+          ]}
           year={2021}
           title="Molecular and morphological systematics of the Bunomys division (Rodentia: Muridae), an endemic radiation on Sulawesi"
           journal="Zoologica Scripta"
@@ -108,7 +193,16 @@ import Background from "../components/Background.astro";
           isRequest={true}
         />
         <Published
-          author="Nations, J.A., Mursyid, A., Darma Busta, R., Adrian, S.P., Handika, H., Apandi, Achmadi, A.S. and Esselstyn, J.A"
+          authors={[
+            "Nations, J.A.",
+            "Mursyid, A.",
+            "Darma Busta, R.",
+            "Adrian, S.P.",
+            "Handika, H.",
+            "Apandi",
+            "Achmadi, A.S.",
+            "Esselstyn, J.A",
+          ]}
           year={2021}
           title="The first report of albinism in a Sundaland endemic rodent"
           journal="Mammalia"
@@ -119,7 +213,14 @@ import Background from "../components/Background.astro";
       </Publication>
       <Publication year="2020">
         <Published
-          author="Harapan, T.S., Agung, A.P., Handika, H., Novarino, W., Tjong, D.H. and Tomlinson, K.W"
+          authors={[
+            "Harapan, T.S.",
+            "Agung, A.P.",
+            "Handika, H.",
+            "Novarino, W.",
+            "Tjong, D.H.",
+            "Tomlinson, K.W",
+          ]}
           year={2020}
           title="New records and potential geographic distribution of Elongated Caecilian, Ichthyophis elongatus Taylor, 1965 (Amphibia, Gymnophiona, Ichthyophiidae), endemic to West Sumatra, Indonesia"
           journal="Check List, "
@@ -128,7 +229,16 @@ import Background from "../components/Background.astro";
           pdfUrl="https://www.researchgate.net/publication/347398819_New_records_and_potential_geographic_distribution_of_Elongated_Caecilian_Ichthyophis_elongatus_Taylor_1965_Amphibia_Gymnophiona_Ichthyophiidae_endemic_to_West_Sumatra_Indonesia#fullTextFileContent"
         />
         <Published
-          author="Winterhoff, M.L., Achmadi, A.S., Roycroft, E.J., Handika, H., Putra, R.T.J., Rowe, K.M.C., Perkins, S. and Rowe, K.C"
+          authors={[
+            "Winterhoff, M.L.",
+            "Achmadi, A.S.",
+            "Roycroft, E.J.",
+            "Handika, H.",
+            "Putra, R.T.J.",
+            "Rowe, K.M.C.",
+            "Perkins, S.",
+            "Rowe, K.C",
+          ]}
           year={2020}
           title="Native and introduced trypanosome parasites in endemic and introduced murine rodents of Sulawesi"
           journal="Journal of Parasitology"
@@ -139,7 +249,13 @@ import Background from "../components/Background.astro";
       </Publication>
       <Publication year="2019 and earlier">
         <Published
-          author="Esselstyn, J.A., Achmadi, A.S., Handika, H., Giarla, T.C. and Rowe, K.C"
+          authors={[
+            "Esselstyn, J.A.",
+            "Achmadi, A.S.",
+            "Handika, H.",
+            "Giarla, T.C.",
+            "Rowe, K.C",
+          ]}
           year={2019}
           title="A new climbing shrew from Sulawesi highlights the tangled taxonomy of an endemic radiation"
           journal="Journal of Mammalogy"
@@ -148,7 +264,15 @@ import Background from "../components/Background.astro";
           pdfUrl="https://esselstyn.github.io/publications/2019/Esselstyn-2019.pdf"
         />
         <Published
-          author="Janra, M.N., Noske, R.A., Chornelia, A., Handika, H., Mursyid, A., Agung, A. and Saputra, A"
+          authors={[
+            "Janra, M.N.",
+            "Noske, R.A.",
+            "Chornelia, A.",
+            "Handika, H.",
+            "Mursyid, A.",
+            "Agung, A.",
+            "Saputra, A",
+          ]}
           year={2018}
           title="A second breeding record of Chestnut-naped Forktails Enicurus ruficapillus in Sumatra, and observations suggesting females alone incubate"
           journal="Kukila"
@@ -157,7 +281,13 @@ import Background from "../components/Background.astro";
           pdfUrl="https://kukila.org/index.php/KKL/article/view/533/504"
         />
         <Published
-          author="Demos, T.C., Achmadi, A.S., Handika, H., Rowe, K.C. and Esselstyn, J.A"
+          authors={[
+            "Demos, T.C.",
+            "Achmadi, A.S.",
+            "Handika, H.",
+            "Rowe, K.C.",
+            "Esselstyn, J.A",
+          ]}
           year={2017}
           title="A new species of shrew (Soricomorpha: Crocidura) from Java, Indonesia: possible character displacement despite interspecific gene flow"
           journal="Journal of Mammalogy"
@@ -166,7 +296,14 @@ import Background from "../components/Background.astro";
           pdfUrl="https://esselstyn.github.io/publications/2017/Demos-2017.pdf"
         />
         <Published
-          author="Demos, T.C., Achmadi, A.S., Giarla, T.C., Handika, H., Rowe, K.C. and Esselstyn, J.A"
+          authors={[
+            "Demos, T.C.",
+            "Achmadi, A.S.",
+            "Giarla, T.C.",
+            "Handika, H.",
+            "Rowe, K.C.",
+            "Esselstyn, J.A",
+          ]}
           year={2016}
           title="Local endemism and within‐island diversification of shrews illustrate the importance of speciation in building Sundaland mammal diversity"
           journal="Molecular ecology"
@@ -175,7 +312,12 @@ import Background from "../components/Background.astro";
           pdfUrl="https://esselstyn.github.io/publications/2016/Demos-2016.pdf"
         />
         <Published
-          author="Esselstyn, J.A., Achmadi, A.S., Handika, H. and Rowe, K.C"
+          authors={[
+            "Esselstyn, J.A.",
+            "Achmadi, A.S.",
+            "Handika, H.",
+            "Rowe, K.C",
+          ]}
           year={2015}
           title="A hog-nosed shrew rat (Rodentia: Muridae) from Sulawesi Island, Indonesia"
           journal="Journal of Mammalogy"
@@ -184,7 +326,7 @@ import Background from "../components/Background.astro";
           pdfUrl="https://esselstyn.github.io/publications/2015/Esselstyn-2015.pdf"
         />
         <Published
-          author="Handika, H., Nurdin, J. and Rizaldi"
+          authors={["Handika, H.", "Nurdin, J.", "Rizaldi"]}
           year={2013}
           title="Small Terrestrial Mammals Community on Mount Singgalang, West Sumatra"
           journal="Jurnal Biologi Universitas Andalas"
@@ -195,13 +337,34 @@ import Background from "../components/Background.astro";
       </Publication>
       <Publication year="Manuscript in prep">
         <Forthcoming
-          author="Handika, H., Moncrieff, A. E., Del-Rio G., Canton, R., Rutledge, S. L., Hernández-Canchola, G., Babb-Biernacki, S. J.  Chipps, A. S., Pérez-Amaya, N., Chornelia, A., Morales-Martínez, D. M., McCallum, Q., Thom, G., Esselstyn, J. A"
+          authors={[
+            "Handika, H.",
+            "Moncrieff, A. E.",
+            "Del-Rio G.",
+            "Canton, R.",
+            "Rutledge, S. L.",
+            "Hernández-Canchola, G.",
+            "Babb-Biernacki, S. J.",
+            "Chipps, A. S.",
+            "Pérez-Amaya, N.",
+            "Chornelia, A.",
+            "Morales-Martínez, D. M.",
+            "McCallum, Q.",
+            "Thom, G.",
+            "Esselstyn, J. A",
+          ]}
           year="In prep"
           title="NAHPU: A field cataloging application for efficient, repeatable, and inclusive collection-based evolutionary studies"
           journal=""
         />
         <Forthcoming
-          author="Handika, H., Rowe, K.C., Achmadi, A.S., Swanson, M. T., and Esselstyn, J.A"
+          authors={[
+            "Handika, H.",
+            "Rowe, K.C.",
+            "Achmadi, A.S.",
+            "Swanson, M. T.",
+            "Esselstyn, J.A",
+          ]}
           year="In prep"
           title="A new species of Frateromys from the Northern Peninsula of Sulawesi, Indonesia"
           journal=""
