--- a/src/pages/pubs.astro
+++ b/src/pages/pubs.astro
@@ -53,6 +53,27 @@ import Background from "../components/Background.astro";
         title="How many mammal species are there now? Updates and trends in taxonomic, nomenclatural, and geographic knowledge"
         journal="Journal of Mammalogy"
       />
+      <Publication year="2025">
+        <Published
+          authors={[
+            "Adams, A.L.",
+            "Achmadi, A.S.",
+            "Mursyid, A.",
+            "Handika, H.",
+            "Nurdin, M.R.T.",
+            "Esselstyn, J.A.",
+            "Perkins, S.L.",
+            "Rowe, K.M.",
+            "Rowe, K.C.",
+          ]}
+          year={2025}
+          title="Wildlife disease surveillance from village to peak: Trypanosome infections of mammals on Sulawesi revealed higher prevalence in intact montane forests"
+          journal="THERYA"
+          pageVol="16(1), 125-141"
+          altUrl="https://mastozoologiamexicana.com/therya/index.php/THERYA/article/view/6154"
+          pdfUrl="https://mastozoologiamexicana.com/therya/index.php/THERYA/article/view/6154/1475"
+        />
+      </Publication>
       <Publication year="2024">
         <Published
           authors={["Handika, H.", "Esselstyn, J. A"]}
