--- a/src/pages/pubs.astro
+++ b/src/pages/pubs.astro
@@ -49,7 +49,7 @@ import Background from "../components/Background.astro";
           "Huckaby, D. G.",
           "Upham, N. S",
         ]}
-        year="Submitted"
+        year="In review"
         title="How many mammal species are there now? Updates and trends in taxonomic, nomenclatural, and geographic knowledge"
         journal="Journal of Mammalogy"
         doi="https://doi.org/10.1101/2025.02.27.640393"
