Remove trailing dots.

--- a/src/pages/pubs.astro
+++ b/src/pages/pubs.astro
@@ -65,7 +65,7 @@ import Background from "../components/Background.astro";
             "Esselstyn, J.A.",
             "Perkins, S.L.",
             "Rowe, K.M.",
-            "Rowe, K.C.",
+            "Rowe, K.C",
           ]}
           year={2025}
           title="Wildlife disease surveillance from village to peak: Trypanosome infections of mammals on Sulawesi revealed higher prevalence in intact montane forests"
