--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -171,54 +171,42 @@ const firstParagraphClasses = cntl`
           class="rounded-xl float-right ml-4"
         />
         <p class={firstParagraphClasses}>
-          My goal for this project is to promote efficient, integrative, and
-          inclusive collection-based evolutionary studies through
-          high-performance computing and innovative data management and
-          data-sharing approaches. Additionally, I aim to facilitate low-cost
-          computing practices in genomic studies, which will reduce the
-          ecological footprint of evolutionary studies while allowing
-          underfunded labs to benefit from the decreasing cost of genomic
-          sequencing. I create user-friendly, memory-efficient, cross-platform
-          apps to achieve my objectives. The development of the apps leverages
-          emerging technologies in software development (e.g., <Link
+          My software project spans a broad spectrum of collection-based
+          evolutionary studies, from data collection in the field (<Link
+            text="NAHPU"
+            url="https://nahpu.app"
+          />), species identification through innovative digital field guide (<Link
+            text="RINJA"
+            url="https://github.com/hhandika/rinja"
+          />), a phylogenomic pipeline (<Link
+            text="ULLAR"
+            url="https://github.com/hhandika/ullar"
+          />), genomic data wrangling and summarization (<Link
+            text="SEGUL"
+            url="https://segul.app"
+          />), to taxonomic database (<Link
+            text="MDD app, website, and tooling"
+            url="https://github.com/mammaldiversity/mdd_app"
+          />). My goal for this project is to develop software to improve the
+          efficiency, data integration, and accessibility of biodiversity
+          research. Additionally, I aim to reduce the ecological footprint of
+          genomic studies while allowing underfunded labs to benefit from the
+          decreasing cost of genomic sequencing. The development of the apps
+          leverages emerging technologies in software development (e.g., <Link
             text="Rust"
             url="https://www.rust-lang.org/"
           />, <Link text="Flutter" url="https://flutter.dev/" />, and <Link
             text="CI/CD"
             url="https://en.wikipedia.org/wiki/CI/CD"
           />
-          ). Furthermore, I take advantage of advancements in CPU technology and heterogenous
-          computing to accelerate data processing and minimize reliance on expensive
-          and power-hungry High-Performance Computing Clusters.
+          ). Especially for genomic studies, I take advantage of advancements in
+          CPU technology and <Link
+            text="heterogenous computing"
+            url="https://en.wikipedia.org/wiki/Heterogeneous_computing"
+          /> to accelerate data processing and minimize reliance on expensive and
+          power-hungry High-Performance Computing Clusters.
         </p>
-        <p class="mt-2">
-          I developed three apps under this project: <Link
-            text="NAHPU"
-            url="https://nahpu.app"
-          />, <Link text="SEGUL" url="https://segul.app" />, and ULLAR. NAHPU is
-          a digital field catalog that simplifies data acquisition and
-          management for increasingly complex collection-based evolutionary
-          studies. The app integrates specimen, tissue, and derivative data,
-          such as specimen photographs and audio recordings. It streamlines data
-          management from fieldwork to the museum database, eliminating typical
-          secondary data entry required for conventional paper-based field
-          catalogs. SEGUL is a high-performance, memory-efficient tool for
-          genomic studies. It is a proof of concept for a genomic tool that runs
-          from mobile devices and personal computers to high-performance
-          computing clusters. It enables teaching genomic analyses in
-          environments with limited access to computing power. ULLAR is
-          currently in the early development stage. I develop the app to
-          minimize dependencies and simplify phylogenomic data analyses.
-        </p>
-
         <div class="mt-4 mb-2 text-semibold">Publications:</div>
-        <ProjectPubs author="Handika et al.">
-          <PubButton
-            author="Handika, H., Moncrieff, A. E., Del-Rio G., Canton, R., Rutledge, S. L., Hernández-Canchola, G., Babb-Biernacki, S. J.  Chipps, A. S., Pérez-Amaya, N., Chornelia, A., Morales-Martínez, D. M., McCallum, Q., Thom, G., Esselstyn, J. A"
-            year="In prep"
-            title="NAHPU: A field cataloging application for efficient, repeatable, and inclusive collection-based evolutionary studies"
-          />
-        </ProjectPubs>
         <ProjectPubs author="Handika and Esselstyn">
           <PubButton
             author="Handika, H. and Esselstyn, J. A"
@@ -229,6 +217,22 @@ const firstParagraphClasses = cntl`
             isRequest={true}
           />
         </ProjectPubs>
+        <ProjectPubs author="Handika et al.">
+          <PubButton
+            author="Handika, H., Moncrieff, A. E., Del-Rio G., Canton, R., Rutledge, S. L., Hernández-Canchola, G., Babb-Biernacki, S. J.  Chipps, A. S., Pérez-Amaya, N., Chornelia, A., Morales-Martínez, D. M., McCallum, Q., Thom, G., Esselstyn, J. A"
+            year="In prep"
+            title="NAHPU: A field cataloging application for efficient, repeatable, and inclusive collection-based evolutionary studies"
+          />
+        </ProjectPubs>
+
+        <ProjectPubs author="Burgin et al.">
+          <PubButton
+            author="Burgin, C. J., Zijlstra, J. S., Becker, M. A., Handika, H., Widness, J., Liphardt, S., Huckaby, D. G., and Upham, N. S."
+            year="In review"
+            title="How many mammal species are there now? Updates and trends in taxonomic, nomenclatural, and geographic knowledge"
+            doi="https://doi.org/10.1101/2025.02.27.640393"
+          />
+        </ProjectPubs>
       </Content>
     </div>
     <SectionHead
@@ -236,24 +240,86 @@ const firstParagraphClasses = cntl`
       subtitle="Developing on-devices, cross-platform machine-learning methods to improve biodiversity research"
     />
     <Content>
-      Coming soon as a part of my postdoc project at <Link
+      This project aims to implement emerging machine-learning (ML) approaches
+      to aid natural history studies and enhance our understanding of
+      biodiversity. It will be part of my postdoc at <Link
         text="Porto's lab"
         url="https://agporto.github.io/"
-      />, the University of Florida.
+      />, the University of Florida, starting Summer 2025. The goal is to
+      develop low-cost, user-friendly, and cross-platform (mobile and desktop)
+      on-device large language models (LLMs) and computer vision ML approaches.
+      My work will include integrating the models into the software I currently
+      develop. The LLM models will summarize and translate digital field notes.
+      The computer vision models will extract data from paper-based natural
+      history catalogs and identify phenotypic patterns from specimen images. In
+      collaboration with <Link
+        text="Del-Rio's lab"
+        url="https://www.gdel-rio.com/"
+      /> (University of Florida), another potential work is to develop a cross-platform
+      ML tool to identify selective sweep in genomic data.
     </Content>
     <hr class="my-4 border-t-2 border-chetwode-200 rounded-full" />
+    <SectionHead
+      title="Other Projects"
+      subtitle="Projects that I am involved in outside my main research"
+    />
+    <Content>
+      <h3 class="font-semibold">
+        Mammalian Microbiomes and Host-Parasites Interaction
+      </h3>
+      <p>
+        This project is part of our ongoing research on Sulawesi Island,
+        Indonesia. We aim to understand the microbial communities in the gut
+        regions of shrews and rodents. Additionally, we focus on detecting
+        <i>Trypanosoma</i> parasites in native rodents of Sulawesi to study host-parasite
+        interactions across elevational gradients.
+      </p>
+      <div class="mt-4 mb-2 text-semibold">Publications:</div>
+      <ProjectPubs author="Adams et al.">
+        <PubButton
+          author="Adams, A.L., Achmadi, A.S., Mursyid, A., Handika, H., Nurdin, M.R.T., Esselstyn, J.A., Perkins, S.L., Rowe, K.M., and Rowe, K.C."
+          year="2025"
+          title="Wildlife disease surveillance from village to peak: Trypanosome infections of mammals on Sulawesi revealed higher prevalence in intact montane forests"
+          doi="https://mastozoologiamexicana.com/therya/index.php/THERYA/article/view/6154"
+          pdfUrl="https://mastozoologiamexicana.com/therya/index.php/THERYA/article/view/6154/1475"
+        />
+      </ProjectPubs>
+      <ProjectPubs author="Mursyid et. al.">
+        <PubButton
+          author="Mursyid, A., Achmadi, A.S., Novarino, W., Handika, H., Nugroho, H.A., Anita, S., Adams, A.L., Rowe, K.M.C., and Rowe, K.C"
+          year="2023"
+          title="Trypanosoma (Euglenozoa: Kinetoplastea) infections in rodents, bats, and shrews along an elevation and disturbance gradient in Central Sulawesi, Indonesia"
+          doi="http://dx.doi.org/10.3853/j.2201-4349.75.2023.1786"
+          pdfUrl="https://journals.australian.museum/media/dd/documents/1786_complete.62f64af.pdf"
+        />
+      </ProjectPubs>
+      <ProjectPubs author="Swanson et. al.">
+        <PubButton
+          author="Swanson, M.T., Henson, M.W., Handika, H., Achmadi, A.S., Anita, S., Rowe, K.C., and Esselstyn, J.A"
+          year="2023"
+          title="Mycoplasmataceae dominate microbial community differences between gut regions in mammals with a simple gut architecture"
+          doi="https://doi.org/10.1093/jmammal/gyac098"
+          pdfUrl="https://academic.oup.com/jmammal/article/104/1/146/6823667"
+        />
+      </ProjectPubs>
+      <ProjectPubs author="Winterhoff et. al.">
+        <PubButton
+          author="Winterhoff, M.L., Achmadi, A.S., Roycroft, E.J., Handika, H., Putra, R.T.J., Rowe, K.M.C., Perkins, S., and Rowe, K.C"
+          year="2020"
+          title="Native and introduced trypanosome parasites in endemic and introduced murine rodents of Sulawesi"
+          doi="https://doi.org/10.1645/19-136"
+          pdfUrl="https://bioone.org/journalArticle/Download?urlId=10.1645%2F19-136"
+        />
+      </ProjectPubs>
+    </Content>
     <Image
       src={herbarium}
       alt="Herbarium Universitas Andalas"
       width={220}
       class="rounded-xl float-right ml-4 mt-8"
     />
-    <SectionHead
-      title="Other Projects"
-      subtitle="Projects on other taxa and regions"
-    />
     <Content>
-      <h3 class="font-semibold">Specimen Digitization</h3>
+      <h3 class="font-semibold mt-4">Specimen Digitization</h3>
       <p>
         This project is led by Dr. Nurainas at the Herbarium Universitas Andalas
         (ANDA) funded through the collection and data mobilization grant
@@ -286,17 +352,16 @@ const firstParagraphClasses = cntl`
       </ProjectPubs>
     </Content>
     <Content>
-      <h3 class="font-semibold">
+      <h3 class="font-semibold mt-4">
         Genomics and Systematics of Antbirds in the Neotropics
       </h3>
       <p>
-        I am involved in two projects led by Marky Mutchler (the University of
-        Chicago) and Ryan Zucker (Cornell University). Both students are under
-        the supervision of <Link
-          text="Dr. Glaucia Del-Rio"
-          url="https://www.gdel-rio.com/"
-        />, the University of Florida. We aim to understand the genomic basis of
-        speciation and systematics of antbirds in the Neotropics.
+        I mentored to students: Marky Mutchler (the University of Chicago) and
+        Ryan Zucker (Cornell University). Both of them are under the supervision
+        of <Link text="Dr. Glaucia Del-Rio" url="https://www.gdel-rio.com/" />,
+        the University of Florida. We aim to understand the genomic basis of
+        speciation and systematics of antbirds in the Neotropics. My involement
+        is primarily in the phylogenomic analyses of the studies.
       </p>
     </Content>
   </MainPage>
