--- a/src/pages/pubs.astro
+++ b/src/pages/pubs.astro
@@ -37,6 +37,7 @@ import Background from "../components/Background.astro";
         year="In press"
         title="Systematics and historical biogeography of Crunomys and Maxomys (Muridae: Murinae), with the description of a new species from Sulawesi and new genus-level classification"
         journal="Journal of Mammalogy"
+        doi="https://doi.org/10.1093/jmammal/gyaf006"
       />
       <Forthcoming
         authors={[
