--- a/src/pages/teaching.astro
+++ b/src/pages/teaching.astro
@@ -77,13 +77,13 @@ const cardDescriptonClasses = cntl`
       </Card>
       <Card
         title="BIOL 1209 Introduction to Biology"
-        subtitle="Teaching assistant · Spring 2021"
+        subtitle="Teaching assistant · Spring 2021, 2025"
         isLast={true}
       >
         <p class={cardDescriptonClasses}>
           This course is an introduction to the principles of biology that
           covers topics on ecology, evolution, and diversity. I taught lab
-          section and assisted with grading. My class size was about 60
+          section and assisted with grading. My class size was about 50
           students.
         </p>
       </Card>
