Add rsvp button.

--- a/src/pages/news/defense.astro
+++ b/src/pages/news/defense.astro
@@ -31,7 +31,7 @@ import { Image } from "astro:assets";
       <p
         class="mt-4 text-pretty text-lg text-slate-700 dark:text-slate-200 sm:text-xl/8"
       >
-        Dissertation defense presentation at Louisiana State University
+        Doctoral dissertation defense at Louisiana State University
       </p>
       <p
         class="mt-4 text-pretty text-lg text-slate-700 dark:text-slate-200 sm:text-xl/8"
@@ -44,6 +44,16 @@ import { Image } from "astro:assets";
         <p>Date: April 28th, 2025</p>
         <p>Time: 09:30 AM - 10:30 AM (CDT)</p>
         <p>Location: LSUMNS Public Exhibit, Murphy J. Foster Hall</p>
+      </div>
+      <div>
+        <a
+          href="https://www.icloud.com/invites/0c7P-rPOTZC9HwA-NcbXS_Myg"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="inline-block mt-4 px-6 py-3 text-lg font-semibold text-white bg-blue-600 rounded-lg hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2"
+        >
+          RSVP for Zoom
+        </a>
       </div>
       <div
         class="mx-auto mt-8 mb-8 w-full max-w-2xl rounded-lg p-4 dark:bg-gray-800 flex justify-center"
