--- a/src/pages/news/defense.astro
+++ b/src/pages/news/defense.astro
@@ -25,7 +25,7 @@ import { Image } from "astro:assets";
       <h1
         class="font-serif text-3xl text-chetwode-950 dark:text-chetwode-50 mt-4"
       >
-        In Situ Diversification of Insular Rodents: From Efficient Software to
+        In Situ Diversification of Insular Rodents: from Efficient Software to
         Integrative Empirical Approaches
       </h1>
       <p
