--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,9 @@ const statsGridClasses = cntl`
 `;
 ---
 
-<Layout title="Island small mammals and inclusive biodiversity software">
+<Layout
+  title="Island small mammals and efficient, scalable biodiversity software"
+>
   <MainPage>
     <Background backgroundImage={rodentSvg} />
     <div class="text-center item-center mt-8 md:mt-16">
@@ -70,7 +72,8 @@ const statsGridClasses = cntl`
         beneficial international collaboration, and increase the accessibility
         of biodiversity research. My work encompasses conducting fieldwork in
         remote montane forests and developing computer programs that scale from
-        mobile devices to high-performance computing clusters.
+        mobile devices, personal computers, to high-performance computing
+        clusters.
       </p>
     </div>
     <SocialMediaIcons />
