--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="I study small mammal diversity and speciation on islands and develop inclusive, accessible software to advance biodiversity research."
+      content="I study small mammal diversity and speciation on islands and develop efficient, scalable, and accessible software to advance biodiversity research."
     />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
