--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -64,7 +64,7 @@ const statsGridClasses = cntl`
         Hi, I'm <strong>Heru Handika</strong>
       </h1>
       <PageDescription>
-        Post-Doctoral Associates · University of Florida, USA
+        Post-Doctoral Associate · the University of Florida, USA
       </PageDescription>
       <p class={heroTextClasses}>
         I study small mammal diversity and speciation on islands and develop
