--- a/src/pages/pubs.astro
+++ b/src/pages/pubs.astro
@@ -16,31 +16,6 @@ import Background from "../components/Background.astro";
       <Publication year="Forthcoming" />
       <Forthcoming
         authors={[
-          "Giarla, T. C.",
-          "Achmadi, A.S.",
-          "Fabre, P. H.",
-          "Handika, H.",
-          "Chipps, A. S.",
-          "Swanson, M.T.",
-          "Nations, J. A.",
-          "Morni, M. A.",
-          "William-Dee, J.",
-          "Inayah, N.",
-          "Jayanti, E. D.",
-          "Nurdin, M.R.T.J.",
-          "Griffin, K. E.",
-          "Khan, F. A. A.",
-          "Heaney, L. R.",
-          "Rowe, K. C.",
-          "Esselstyn, J. A",
-        ]}
-        year="In press"
-        title="Systematics and historical biogeography of Crunomys and Maxomys (Muridae: Murinae), with the description of a new species from Sulawesi and new genus-level classification"
-        journal="Journal of Mammalogy"
-        doi="https://doi.org/10.1093/jmammal/gyaf006"
-      />
-      <Forthcoming
-        authors={[
           "Burgin, C. J.",
           "Zijlstra, J. S.",
           "Becker, M. A.",
@@ -50,12 +25,39 @@ import Background from "../components/Background.astro";
           "Huckaby, D. G.",
           "Upham, N. S",
         ]}
-        year="In review"
+        year="Accepted"
         title="How many mammal species are there now? Updates and trends in taxonomic, nomenclatural, and geographic knowledge"
         journal="Journal of Mammalogy"
         doi="https://doi.org/10.1101/2025.02.27.640393"
       />
       <Publication year="2025">
+        <Published
+          authors={[
+            "Giarla, T. C.",
+            "Achmadi, A.S.",
+            "Fabre, P. H.",
+            "Handika, H.",
+            "Chipps, A. S.",
+            "Swanson, M.T.",
+            "Nations, J. A.",
+            "Morni, M. A.",
+            "William-Dee, J.",
+            "Inayah, N.",
+            "Jayanti, E. D.",
+            "Nurdin, M.R.T.J.",
+            "Griffin, K. E.",
+            "Khan, F. A. A.",
+            "Heaney, L. R.",
+            "Rowe, K. C.",
+            "Esselstyn, J. A",
+          ]}
+          year={2025}
+          title="Systematics and historical biogeography of Crunomys and Maxomys (Muridae: Murinae), with the description of a new species from Sulawesi and new genus-level classification"
+          journal="Journal of Mammalogy"
+          doi="https://doi.org/10.1093/jmammal/gyaf006"
+          pdfUrl="https://www.researchgate.net/publication/392705776_Systematics_and_historical_biogeography_of_Crunomys_and_Maxomys_Muridae_Murinae_with_the_description_of_a_new_species_from_Sulawesi_and_new_genus-level_classification"
+          isRequest={true}
+        />
         <Published
           authors={[
             "Adams, A.L.",
