--- a/src/pages/pubs.astro
+++ b/src/pages/pubs.astro
@@ -54,6 +54,7 @@ import Background from "../components/Background.astro";
           year={2025}
           title="Systematics and historical biogeography of Crunomys and Maxomys (Muridae: Murinae), with the description of a new species from Sulawesi and new genus-level classification"
           journal="Journal of Mammalogy"
+          pageVol="gyaf006"
           doi="https://doi.org/10.1093/jmammal/gyaf006"
           pdfUrl="https://www.researchgate.net/publication/392705776_Systematics_and_historical_biogeography_of_Crunomys_and_Maxomys_Muridae_Murinae_with_the_description_of_a_new_species_from_Sulawesi_and_new_genus-level_classification"
           isRequest={true}
